[gd_scene load_steps=9 format=2]

[ext_resource path="res://Welcome.gd" type="Script" id=1]
[ext_resource path="res://Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameFish.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/fonts/slkscre.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://QuitMenu.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 4 )

[node name="Welcome" type="Node"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="GameFish" parent="." instance=ExtResource( 3 )]

[node name="FishStartingPosition" type="Position2D" parent="."]
position = Vector2( 500, 200 )
scale = Vector2( 0.75, 0.75 )

[node name="WelcomeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -275.0
margin_top = 70.0
margin_right = 275.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Welcome to Aquarium!"
align = 1

[node name="EnterNameLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -261.0
margin_top = -200.0
margin_right = 261.0
margin_bottom = -150.0
custom_fonts/font = SubResource( 2 )
text = "Enter your fish's name:"

[node name="NameInput" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -89.0
margin_top = -135.0
margin_right = 89.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 3 )
clear_button_enabled = true
placeholder_text = "Whaleu"

[node name="SceneChangeTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="QuitMenu" parent="." instance=ExtResource( 5 )]
[connection signal="text_entered" from="NameInput" to="." method="_on_NameInput_text_entered"]
[connection signal="timeout" from="SceneChangeTimer" to="." method="_on_SceneChangeTimer_timeout"]
[connection signal="pressed" from="QuitMenu/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="QuitMenu/NoButton" to="." method="_on_NoButton_pressed"]

[editable path="QuitMenu"]
